--- a/cf/base-web-manifest.yml
+++ b/cf/base-web-manifest.yml
@@ -1,5 +1,10 @@
 ---
 inherit: base-manifest.yml
 
-command: scripts/init-server.sh /dev/stderr && waitress-serve --expose-tracebacks --port=$PORT discovery.wsgi:application
+command: scripts/init-webserver.sh /dev/stderr && waitress-serve --expose-tracebacks --port=$PORT discovery.wsgi:application
 memory: 128M
+services:
+  - discovery-config
+  - discovery-db
+  - discovery-tasks
+  - discovery-auth
