--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,8 @@ jobs:
           background: true
           command: |
             source /venv/bin/activate
-            scripts/init-server.sh /dev/stderr
+            scripts/init-db.sh /dev/stderr
+            scripts/init-webserver.sh /dev/stderr
             scripts/load-fixtures.sh
             waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
 
