--- a/compliance/access_control/component.yaml
+++ b/compliance/access_control/component.yaml
@@ -1,9 +1,26 @@
 schema_version: "3.0.0"
 name: Access Control Policies for Discovery
 documentation_complete: false
+
+verifications:
+- key: repo
+  name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- key: circle
+  name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
+- key: django
+  name: Django
+  path: https://docs.djangoproject.com/en/1.8/
+  type: URL
+
 satisfies:
 - standard_key: NIST-800-53
-  control_key: AC-2   # Account Management
+  control_key: AC-2 # Account Management
   implementation_statuses:
     - Implemented
   references:
@@ -11,28 +28,36 @@ satisfies:
   narrative:
     - key: AC-2a
       text: |
-        Identifies and selects the following types of information system accounts to support organizational missions/business functions: individual, group, system, application, guest/anonymous, and temporary accounts
+        _Control:_ **Identifies and selects the following types of information system accounts to support organizational missions/business functions: individual, group, system, application, guest/anonymous, and temporary accounts**
+
+        The Discovery application has defined several granular roles, both at the infrasructure and application level, that allow for fine grained permissions.  On the infrastructure side these include Cloud.gov organization manager, auditor, and billing manager, Cloud.gov space managers, developers, and auditors, GitHub maintainers and external contributors, and CircleCI service managers.  For the application most traffic is served up to public anonymous traffic, but we do have Django site administrators capable of modifying users, content, and managing periodic tasks.
+
+        Each role is inhabited by only those people who need that ability.  Role membership can often overlap due to the smaller number of internal staff and contractors working on the system at any given time.
     - key: AC-2b
       text: |
-        Assigns account managers for information system accounts
+        _Control:_ **Assigns account managers for information system accounts**
+
+        The PSHC Discovery management team assigns staff and contractors access to roles discussed in AC-2a only as needed and access is limited to the roles needed to accomplish their missions.  The PSHC may delegate management of certain responsibilities to other staff members or contractors working on the platform if the system can benefit from their management.  All managers are either GSA staff or current contractors.
     - key: AC-2c
       text: |
-        Establishes conditions for group and role membership
+        _Control:_ **Establishes conditions for group and role membership**
+
+        All Discovery related roles defined in AC-2a have clearly defined permissions and duties and they do not overlap.  A GSA staff member or current contractor may be granted access to a role if they need the permissions or abilities to perform their management approved duties.
     - key: AC-2e
       text: |
-        Requires approvals by GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO for requests to create information system accounts
+        _Control:_ **Requires approvals by GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO for requests to create information system accounts**
+
+        All account created for both infrastructure hosting Discovery application components and application administrative accounts are created by GSA staff that manage the Discovery system or under the request of a designated contractor.  All Cloud.gov accounts are created by the Cloud.gov management team in line with their current FedRAMP'd security controls and assigned to the Discovery organizations.  Discovery management then assigns the users roles needed to accomplish their objectives.
     - key: AC-2f
       text: |
-        Creates, enables, modifies, disables, and removes information system accounts in accordance with GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO
+        _Control:_ **Creates, enables, modifies, disables, and removes information system accounts in accordance with GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO**
+
+        All Discovery roles, both infrastructure and application related, are designed to allow for easy onboarding and offboarding based on the underlying need of the GSA staff member of contractor.  The Discovery management team approves all new users and role changes, and regular audits are performed to ensure least privilege access controls are in place.
     - key: AC-2j
       text: |
-        Reviews accounts for compliance with account management requirements quarterly
-verifications:
-- key: circle
-  name: Repository's Circle CI
-  path: https://circleci.com/gh/PSHCDevOps/discovery
-  type: URL
-- key: django
-  name: Django
-  path: https://docs.djangoproject.com/en/1.8/
-  type: URL
+        _Control:_ **Reviews accounts for compliance with account management requirements at leasy annually**
+
+        The Discovery management team or a delgated staff member of contractor performs regular audits of the users having access to a particular infrastructure or application role, and either corrects access permissions (if part of the Discovery management team) or makes recommendations to the Discovery Management team for further action.
+
+        It is also possible that the Cloud.gov team might revoke a user currently having access to the Discovery Cloud.gov organization and related spaces based on their defined and approved security controls.
+
