--- a/compliance/access_control/component.yaml
+++ b/compliance/access_control/component.yaml
@@ -23,8 +23,6 @@ satisfies:
   control_key: AC-2 # Account Management
   implementation_statuses:
     - Implemented
-  references:
-    - verification_key: django
   narrative:
     - key: AC-2a
       text: |
@@ -33,26 +31,31 @@ satisfies:
         The Discovery application has defined several granular roles, both at the infrasructure and application level, that allow for fine grained permissions.  On the infrastructure side these include Cloud.gov organization manager, auditor, and billing manager, Cloud.gov space managers, developers, and auditors, GitHub maintainers and external contributors, and CircleCI service managers.  For the application most traffic is served up to public anonymous traffic, but we do have Django site administrators capable of modifying users, content, and managing periodic tasks.
 
         Each role is inhabited by only those people who need that ability.  Role membership can often overlap due to the smaller number of internal staff and contractors working on the system at any given time.
+
     - key: AC-2b
       text: |
         _Control:_ **Assigns account managers for information system accounts**
 
         The PSHC Discovery management team assigns staff and contractors access to roles discussed in AC-2a only as needed and access is limited to the roles needed to accomplish their missions.  The PSHC may delegate management of certain responsibilities to other staff members or contractors working on the platform if the system can benefit from their management.  All managers are either GSA staff or current contractors.
+
     - key: AC-2c
       text: |
         _Control:_ **Establishes conditions for group and role membership**
 
         All Discovery related roles defined in AC-2a have clearly defined permissions and duties and they do not overlap.  A GSA staff member or current contractor may be granted access to a role if they need the permissions or abilities to perform their management approved duties.
+
     - key: AC-2e
       text: |
         _Control:_ **Requires approvals by GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO for requests to create information system accounts**
 
         All account created for both infrastructure hosting Discovery application components and application administrative accounts are created by GSA staff that manage the Discovery system or under the request of a designated contractor.  All Cloud.gov accounts are created by the Cloud.gov management team in line with their current FedRAMP'd security controls and assigned to the Discovery organizations.  Discovery management then assigns the users roles needed to accomplish their objectives.
+
     - key: AC-2f
       text: |
         _Control:_ **Creates, enables, modifies, disables, and removes information system accounts in accordance with GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO**
 
         All Discovery roles, both infrastructure and application related, are designed to allow for easy onboarding and offboarding based on the underlying need of the GSA staff member of contractor.  The Discovery management team approves all new users and role changes, and regular audits are performed to ensure least privilege access controls are in place.
+
     - key: AC-2j
       text: |
         _Control:_ **Reviews accounts for compliance with account management requirements at leasy annually**
@@ -61,3 +64,16 @@ satisfies:
 
         It is also possible that the Cloud.gov team might revoke a user currently having access to the Discovery Cloud.gov organization and related spaces based on their defined and approved security controls.
 
+- standard_key: NIST-800-53
+  control_key: AC-3 # Access Enforcement
+  implementation_statuses:
+    - Implemented
+  narrative:
+    - text: |
+        _Control:_ **The information system enforces approved authorizations for logical access to information and system resources in accordance with applicable access control policies**
+
+        All vendor and contract data within the Discovery repository is openly available to the public so no access control is required.  Discovery site administrators granted according to AC-2 must authenticate through a Django authentication, authorization, and session management system.
+
+        All Cloud.gov system access is handled according to policies outlined in the AC-2 controls and Cloud.gov's implemented security controls.  All access to hosting environments (production and development) are fully self contained and access must be individually granted to each environment.
+
+        All GitHub, CircleCI, and related service accounts provide accounts especially tailored to their service offerings and do not interfere with one another.  As stated in AC-2, the Discovery management team may grant GSA staff and current contractors access to these services as needed.
