--- a/compliance/risk_assessment/component.yaml
+++ b/compliance/risk_assessment/component.yaml
@@ -1,6 +1,50 @@
 schema_version: "3.0.0"
 name: Risk Assessment Policies for Discovery
 documentation_complete: false
-satisfies:
 
 verifications:
+- key: repo
+  name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- key: circle
+  name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
+- key: django
+  name: Django
+  path: https://docs.djangoproject.com/en/1.8/
+  type: URL
+
+satisfies:
+- standard_key: NIST-800-53
+  control_key: RA-5 # Vulnerability Scanning
+  implementation_statuses:
+    - Implemented
+  narrative:
+    - key: RA-5a
+      text: |
+        _Control:_ **Scans for vulnerabilities in the information system and hosted applications monthly for Operating System (OS) and web application scanning; quarterly Database scanning (as applicable); and, OS and Web application scanning with every code release, and when new vulnerabilities potentially affecting the system/applications are identified and reported**
+
+
+    - key: RA-5b
+      text: |
+        _Control:_ **Employs vulnerability scanning tools and techniques that facilitate interoperability among tools and automate parts of the vulnerability management process by using standards for; 1) Enumerating platforms, software flaws, and improper configurations; 2) Formatting checklists and test procedures; and 3) Measuring vulnerability impact**
+
+
+    - key: RA-5c
+      text: |
+        _Control:_ **Analyzes vulnerability scan reports and results from security control assessments**
+
+
+    - key: RA-5d
+      text: |
+        _Control:_ **Remediates legitimate high-risk vulnerabilities mitigated within thirty days; moderate risk vulnerabilities mitigated within ninety days in accordance with an organizational assessment of risk**
+
+
+    - key: RA-5e
+      text: |
+        _Control:_ **Shares information obtained from the vulnerability scanning process and security control assessments with ISSO, ISSM, System Program Manager, and submits quarterly as part of the POA&M to the GSA OCISO (unless scanned by GSA enterprise vulnerability scanning solution) to help eliminate similar vulnerabilities in other information systems (i.e., systemic weaknesses or deficiencies)**
+
