--- a/compliance/security_assessment_authorization/component.yaml
+++ b/compliance/security_assessment_authorization/component.yaml
@@ -1,6 +1,29 @@
 schema_version: "3.0.0"
 name: Security Assessment Policies for Discovery
 documentation_complete: false
-satisfies:
 
 verifications:
+- key: repo
+  name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- key: circle
+  name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
+- key: django
+  name: Django
+  path: https://docs.djangoproject.com/en/1.8/
+  type: URL
+
+satisfies:
+- standard_key: NIST-800-53
+  control_key: CA-8 # Penetration Testing
+  implementation_statuses:
+    - Implemented
+  narrative:
+    - text: |
+        _Control:_ **The organization conducts penetration testing annually on internet accessible components**
+
