--- a/compliance/security_planning/component.yaml
+++ b/compliance/security_planning/component.yaml
@@ -1,6 +1,42 @@
 schema_version: "3.0.0"
 name: Security Planning Policies for Discovery
 documentation_complete: false
-satisfies:
 
 verifications:
+- key: repo
+  name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- key: circle
+  name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
+- key: django
+  name: Django
+  path: https://docs.djangoproject.com/en/1.8/
+  type: URL
+
+satisfies:
+- standard_key: NIST-800-53
+  control_key: PL-8 # Information Security Architecture
+  implementation_statuses:
+    - Implemented
+  narrative:
+    - key: PL-8a
+      text: |
+        _Control:_ **Develops an information security architecture for the information system that; 1) Describes the overall philosophy, requirements, and approach to be taken with regard to protecting the confidentiality, integrity, and availability of organizational information; 2) Describes how the information security architecture is integrated into and supports the enterprise architecture; and 3) Describes any information security assumptions about, and dependencies on, external services**
+
+
+
+    - key: PL-8b
+      text: |
+        _Control:_ **Reviews and updates the information security architecture at least annually to reflect updates in the enterprise architecture**
+
+
+
+    - key: PL-8c
+      text: |
+        _Control:_ **Ensures that planned information security architecture changes are reflected in the security plan, the security Concept of Operations (CONOPS), and organizational procurements/acquisitions**
+
