--- a/compliance/access_control/component.yaml
+++ b/compliance/access_control/component.yaml
@@ -22,11 +22,11 @@ satisfies:
 - standard_key: NIST-800-53
   control_key: AC-2 # Account Management
   implementation_statuses:
-    - Implemented
+    - complete
   narrative:
     - key: AC-2a
       text: |
-        _Control:_ **Identifies and selects the following types of information system accounts to support organizational missions/business functions: individual, group, system, application, guest/anonymous, and temporary accounts**
+        _Control:_ **The organization identifies and selects the following types of information system accounts to support organizational missions/business functions: individual, group, system, application, guest/anonymous, and temporary accounts**
 
         The Discovery application has defined several granular roles, both at the infrasructure and application level, that allow for fine grained permissions.  On the infrastructure side these include Cloud.gov organization manager, auditor, and billing manager, Cloud.gov space managers, developers, and auditors, GitHub maintainers and external contributors, and CircleCI service managers.  For the application most traffic is served up to public anonymous traffic, but we do have Django site administrators capable of modifying users, content, and managing periodic tasks.
 
@@ -34,31 +34,31 @@ satisfies:
 
     - key: AC-2b
       text: |
-        _Control:_ **Assigns account managers for information system accounts**
+        _Control:_ **The organization assigns account managers for information system accounts**
 
         The PSHC Discovery management team assigns staff and contractors access to roles discussed in AC-2a only as needed and access is limited to the roles needed to accomplish their missions.  The PSHC may delegate management of certain responsibilities to other staff members or contractors working on the platform if the system can benefit from their management.  All managers are either GSA staff or current contractors.
 
     - key: AC-2c
       text: |
-        _Control:_ **Establishes conditions for group and role membership**
+        _Control:_ **The organization establishes conditions for group and role membership**
 
         All Discovery related roles defined in AC-2a have clearly defined permissions and duties and they do not overlap.  A GSA staff member or current contractor may be granted access to a role if they need the permissions or abilities to perform their management approved duties.
 
     - key: AC-2e
       text: |
-        _Control:_ **Requires approvals by GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO for requests to create information system accounts**
+        _Control:_ **The organization requires approvals by GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO for requests to create information system accounts**
 
         All account created for both infrastructure hosting Discovery application components and application administrative accounts are created by GSA staff that manage the Discovery system or under the request of a designated contractor.  All Cloud.gov accounts are created by the Cloud.gov management team in line with their current FedRAMP'd security controls and assigned to the Discovery organizations.  Discovery management then assigns the users roles needed to accomplish their objectives.
 
     - key: AC-2f
       text: |
-        _Control:_ **Creates, enables, modifies, disables, and removes information system accounts in accordance with GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO**
+        _Control:_ **The organization creates, enables, modifies, disables, and removes information system accounts in accordance with GSA S/SO or Contractor recommendation to be approved and accepted by the GSA AO**
 
         All Discovery roles, both infrastructure and application related, are designed to allow for easy onboarding and offboarding based on the underlying need of the GSA staff member of contractor.  The Discovery management team approves all new users and role changes, and regular audits are performed to ensure least privilege access controls are in place.
 
     - key: AC-2j
       text: |
-        _Control:_ **Reviews accounts for compliance with account management requirements at leasy annually**
+        _Control:_ **The organization reviews accounts for compliance with account management requirements at leasy annually**
 
         The Discovery management team or a delgated staff member of contractor performs regular audits of the users having access to a particular infrastructure or application role, and either corrects access permissions (if part of the Discovery management team) or makes recommendations to the Discovery Management team for further action.
 
@@ -67,7 +67,7 @@ satisfies:
 - standard_key: NIST-800-53
   control_key: AC-3 # Access Enforcement
   implementation_statuses:
-    - Implemented
+    - complete
   narrative:
     - text: |
         _Control:_ **The information system enforces approved authorizations for logical access to information and system resources in accordance with applicable access control policies**
@@ -81,7 +81,7 @@ satisfies:
 - standard_key: NIST-800-53
   control_key: AC-6 # Least Privilege
   implementation_statuses:
-    - Implemented
+    - complete
   narrative:
     - text: |
         _Control:_ **The organization employs the principle of least privilege, allowing only authorized accesses for users (or processes acting on behalf of users) which are necessary to accomplish assigned tasks in accordance with organizational missions and business functions**
